--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=book-app
 
 
-spring.datasource.url=jdbc:mysql:localhost:3306/bookstore
+spring.datasource.url=jdbc:mysql://localhost:3306/bookstore
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=JY@class4579
 
 
 spring.jpa.hibernate.ddl-auto=create
